Add layout and colors.

--- a/index.html
+++ b/index.html
@@ -3,24 +3,68 @@
     <head>
         <meta charset="utf-8">
         <title>The Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
-            <div class="logo">Header Logo</div>
+            <div class="logo" style="color: #F9FAF8; font-size: 24px; font-weight: bold;">Header Logo</div>
             <ul class="header-links">
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
+                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link one</a></li>
+                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link two</a></li>
+                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link three</a></li>
             </ul>
         </div>
         <div class="body">
             <div class="hero">
                 <div class="text-and-button">
-                    <div class="main-text">This website is awesome</div>
-                    <p class="secondary-text">Here is some cool subtext that goes underneath the main text above, yo</p>
-                    <button class="hero">Sign up, yo</button>
+                    <div class="main-text" style="font-size: 48px; font-weight:bolder; color: #F9FAF8;">This website is awesome</div>
+                    <p class="secondary-text">This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+                    <button>Sign up, yo</button>
+                </div>
+                <div class="tenor-gif-embed hero-gif" data-postid="18411594" data-share-method="host" data-aspect-ratio="1.79775" data-width="100%"><a href="https://tenor.com/view/cow-balls-cow-nigmode-cow-gif-18411594">Cow Balls Cow Nigmode Cow GIF</a>from <a href="https://tenor.com/search/cow+balls+cow+nigmode+cow-gifs">Cow Balls Cow Nigmode Cow GIFs</a></div> <script type="text/javascript" async src="https://tenor.com/embed.js"></script>
+            </div>
+        </div>
+        <div class="info">
+            <div class="head">Some random information.</div>
+            <div class="media-objects">
+                <div class="object">
+                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <p class="img-desc">this is some subtext under an illustration or image</p>
+                </div>
+                
+                <div class="object">
+                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <p class="img-desc">this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="object">
+                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <p class="img-desc">this is some subtext under an illustration or image</p>
+                </div>
+
+                <div class="object">
+                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <p class="img-desc">this is some subtext under an illustration or image</p>
                 </div>
             </div>
+        </div>
+        <div class="quote">
+            <div class="quote-info">
+                <p class="quote-text">Get some bitches</p>
+                <p class="author">- Yo momma</p>
+            </div>
+        </div>
+        <div class="cta">
+            <div class="blue-box">
+                <div class="bb-text">
+                    <p class="head">Get some bitches today!</p>
+                    <p class="subtext">Sign up to get some bitches today!</p>
+                </div>
+                <button class="cta-button">Sign up</button>
+            </div>
+        </div>
+        <div class="footer">
+            <p class="foot-text">Copyright © Your mom</p>
         </div>
     </body>
 </html>
