--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
         <div class="header">
             <div class="logo" style="color: #F9FAF8; font-size: 24px; font-weight: bold;">Header Logo</div>
             <ul class="header-links">
-                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link one</a></li>
-                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link two</a></li>
-                <li><a href="https://youtu.be/V-_O7nl0Ii0">header link three</a></li>
+                <li><a href="https://youtu.be/dQw4w9WgXcQ">header link one</a></li>
+                <li><a href="https://youtu.be/dQw4w9WgXcQ">header link two</a></li>
+                <li><a href="https://youtu.be/dQw4w9WgXcQ">header link three</a></li>
             </ul>
         </div>
         <div class="body">
@@ -25,40 +25,40 @@
             </div>
         </div>
         <div class="info">
-            <div class="head">Some random information.</div>
+            <div class="head">Some beautiful artworks</div>
             <div class="media-objects">
                 <div class="object">
-                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <img class="info-img" src="./images/citypop6.jpeg" alt="a beautiful Hiroshi Nagai painting of a palm tree on the rooftop of a building with a pool overlooking the city with a violet sunset">
                     <p class="img-desc">this is some subtext under an illustration or image</p>
                 </div>
                 
                 <div class="object">
-                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <img class="info-img" src="./images/citypop2.jpg" alt="a beautiful Hiroshi Nagai painting of a palm tree overlooking a red bridge over the city with a violet sunset">
                     <p class="img-desc">this is some subtext under an illustration or image</p>
                 </div>
 
                 <div class="object">
-                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <img class="info-img" src="./images/citypop6.jpeg" alt="a beautiful Hiroshi Nagai painting of a palm tree on the rooftop of a building with a pool overlooking the city with a violet sunset">
                     <p class="img-desc">this is some subtext under an illustration or image</p>
                 </div>
 
                 <div class="object">
-                    <img class="info-img" src="./images/citypop6.jpeg">
+                    <img class="info-img" src="./images/citypop6.jpeg" alt="a beautiful Hiroshi Nagai painting of a palm tree on the rooftop of a building with a pool overlooking the city with a violet sunset">
                     <p class="img-desc">this is some subtext under an illustration or image</p>
                 </div>
             </div>
         </div>
         <div class="quote">
             <div class="quote-info">
-                <p class="quote-text">Get some bitches</p>
-                <p class="author">- Yo momma</p>
+                <div class="quote-text">If you're a friend of everybody, you're an enemy to yourself.</div>
+                <div class="author">- Mike Tyson</div>
             </div>
         </div>
         <div class="cta">
             <div class="blue-box">
                 <div class="bb-text">
                     <p class="head">Get some bitches today!</p>
-                    <p class="subtext">Sign up to get some bitches today!</p>
+                    <p class="subtext">Sign up to get some bitches today by clicking that button right over there!</p>
                 </div>
                 <button class="cta-button">Sign up</button>
             </div>
