Add link to deployment and make page sfw

--- a/index.html
+++ b/index.html
@@ -57,8 +57,8 @@
         <div class="cta">
             <div class="blue-box">
                 <div class="bb-text">
-                    <p class="head">Get some bitches today!</p>
-                    <p class="subtext">Sign up to get some bitches today by clicking that button right over there!</p>
+                    <p class="head">Get some protein today!</p>
+                    <p class="subtext">Sign up to get some protein today by clicking that button right over there!</p>
                 </div>
                 <button class="cta-button">Sign up</button>
             </div>
